# KDPPriceTracker

./: .gitignore  .replit  README.md  app.py  create_icons.py  database.py  kdp_tracker.db  pyproject.toml  replit.md  requirements.txt
attached_assets/: Pasted-Build-a-Progressive-Web-App-PWA-using-Python-Flask-and-SQLite-named-KDP-Books-Price-Tracker-C-1761147431093_1761147431094.txt
static/: manifest.json  service-worker.js
static/css/: style.css
static/js/: app.js
templates/: export_view.html  index.html
